--- a/src/modules/home.module.scss
+++ b/src/modules/home.module.scss
@@ -1,6 +1,6 @@
 .image {
   width: 100%;
-  height: 400px;
+  height: 500px;
   opacity: 0.8;
 }
 
@@ -40,11 +40,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center space-between;
-  width: 20%;
+  width: 22%;
   align-items: center;
   text-align: center;
   margin: 5px;
   border: 1px solid black;
+  border-radius: 1%;
 }
 
 .content {
@@ -55,4 +56,5 @@
   letter-spacing: 1px;
   word-spacing: 2px;
   padding-top: 5%;
+  margin: 10px;
 }
