--- a/src/modules/home.module.scss
+++ b/src/modules/home.module.scss
@@ -1,7 +1,7 @@
 .image {
   width: 100%;
   height: 500px;
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 .imageProfile {
@@ -29,6 +29,7 @@
 }
 
 .container {
+  padding-top: 3%;
   display: flex;
   flex-direction: row;
   width: 100%;
