--- a/src/modules/nav.module.scss
+++ b/src/modules/nav.module.scss
@@ -2,10 +2,11 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Raleway", sans-serif;
+  font-family: "Spectral", serif;
 }
 
 nav {
+  padding-top: 10px;
   display: flex;
   justify-content: space-around;
   align-items: center;
