--- a/src/modules/navigation.module.scss
+++ b/src/modules/navigation.module.scss
@@ -43,13 +43,13 @@ nav {
 
 .list {
   display: flex;
-  width: 20%;
+  width: 58%;
   justify-content: space-around;
   letter-spacing: 3px;
   margin: 5px;
   position: absolute;
-  left: 65%;
-  top: 35px;
+  left: 35%;
+  top: 30px;
   list-style: none;
 }
 
@@ -85,6 +85,31 @@ a {
 }
 
 .navButtonTwo {
+  position: relative;
+  width: 150px;
+  height: 40px;
+  // top: 450px;
+  // left: 120px;
+  top: -12px;
+  background: white;
+  border-radius: 50px;
+  color: black;
+  font-size: 16px;
+}
+
+.listTwo {
+  display: flex;
+  width: 70%;
+  justify-content: space-around;
+  letter-spacing: 3px;
+  margin: 5px;
+  position: absolute;
+  left: 55%;
+  top: 35px;
+  list-style: none;
+}
+
+.signOutButton {
   position: relative;
   width: 150px;
   height: 40px;
