--- a/src/modules/signOut.module.scss
+++ b/src/modules/signOut.module.scss
@@ -5,11 +5,11 @@
   // top: 450px;
   // left: 120px;
   top: -10px;
-  background: white;
+  border: none;
+  background: #c2dde6;
   border-radius: 50px;
   color: black;
   font-size: 16px;
-  border: black 2px solid;
 }
 
 .signOutButton:hover {
