--- a/src/modules/landing.module.scss
+++ b/src/modules/landing.module.scss
@@ -30,8 +30,8 @@
   // top: 450px;
   // left: 120px;
   top: 190px;
-  border: 2px solid black;
-  background: white;
+  border: none;
+  background: #c2dde6;
   border-radius: 50px;
   color: black;
   font-size: 16px;
@@ -101,8 +101,8 @@ a {
   // top: 450px;
   // left: 120px;
   top: 190px;
-  border: 2px solid black;
-  background: white;
+  border: none;
+  background: #c2dde6;
   border-radius: 50px;
   color: black;
   font-size: 16px;
@@ -183,8 +183,8 @@ a {
   // top: 450px;
   // left: 120px;
   top: 190px;
-  border: 2px solid black;
-  background: white;
+  border: none;
+  background: #c2dde6;
   border-radius: 50px;
   color: black;
   font-size: 16px;
