--- a/src/modules/navigation.module.scss
+++ b/src/modules/navigation.module.scss
@@ -12,7 +12,7 @@
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-  border-radius: 50px;
+  // border-radius: 50px;
 }
 
 .title {
@@ -77,21 +77,8 @@ a {
   // top: 450px;
   // left: 120px;
   top: -12px;
-  border: 2px solid black;
-  background: white;
-  border-radius: 50px;
-  color: black;
-  font-size: 16px;
-}
-
-.navButtonTwo {
-  position: relative;
-  width: 150px;
-  height: 40px;
-  // top: 450px;
-  // left: 120px;
-  top: -12px;
-  background: white;
+  border: none;
+  background: #c2dde6;
   border-radius: 50px;
   color: black;
   font-size: 16px;
@@ -116,7 +103,8 @@ a {
   // top: 450px;
   // left: 120px;
   top: -12px;
-  background: white;
+  border: none;
+  background: #c2dde6;
   border-radius: 50px;
   color: black;
   font-size: 16px;
