--- a/src/modules/books.module.scss
+++ b/src/modules/books.module.scss
@@ -12,11 +12,11 @@
 .booksGrid {
   display: flex;
   flex-direction: row;
-  width: 98%;
+  width: 100%;
   flex-wrap: wrap;
   justify-content: center;
   padding: 5px;
-  padding-top: 8%;
+
   margin: 0;
   position: relative;
 }
@@ -26,15 +26,31 @@
   flex-direction: column;
   justify-content: center space-between;
   border-radius: 1%;
-  max-height: 250px;
+  max-height: 350px;
+  height: 350px;
   text-align: center;
   list-style-type: none;
   text-decoration: none;
   color: black;
+  align-items: center;
 }
 
 .list {
-  width: 25%;
   list-style: none;
-  width: 33%;
+  width: 21%;
+  margin: 10px;
+}
+
+.bookImage {
+  width: 100%;
+  max-width: 200px;
+  height: 300px;
+  max-height: 300px;
+  border-radius: 25px;
+}
+
+.bookButton {
+  border: none;
+  background-color: white;
+  cursor: pointer;
 }
